= 0.4.0.0b = * WARNING:  This update modifies Cactus Masonry's CSS behaviour.  There are a number of changes in place to support new features and handle Internet Explorer issues.  For one, the #masonry_post_gallery selector has been changed to div.masonry_post_gallery.  These changes will not affect the gallery's default appearance - but they may affect custom CSS styling.  Be sure to check your site's appearance after updating. * Added the ability to select post/page-like custom post types in the gallery * Eliminated unnecessary site overhead caused by the plugin * Added the ability to manually handle the loading of external scripts to improve AJAX loading time * Added an override for the automatic width setting that can cause the gallery to resize its contents after external image resizing * Added the ability to crop images to fill each brick * Added the ability to specify an image background colour for added flexibility around transparent images when using the different hover colours * Added the option to specify an additional custom class name for the link elements in the gallery to increase compatibility with other plugins. * Multiple instances of Cactus Gallery can now run at the same time on the same page * Improved gallery functionality when masonry is switched off * Fixed a layout bug that may occur on some IE installs * Modified how image spacing works to address IE11's inability to render basic CSS * Fixed some minor style issues that could cause bugs in older IE browsers * Fixed a major bug in IE8 to IE11 caused by (in)compatibility mode * Fixed a bug where the title/excerpt box can appear above the loading box * Fixed a bug where borders would be cut off an image with a set max-width/max-height * Fixed a bug where excerpts containing a line feed or carriage return would break the plugin * Fixed a bug where the search_start and page_size parameters fail to function correctly when there are posts present with no featured image and default_image_id is unsp

--- a/masonry-post-gallery.css
+++ b/masonry-post-gallery.css
@@ -1,28 +1,64 @@
-div.masonry_brick, a.masonry_brick_a, div.masonry_brick_a, img.masonry_brick_img, div#masonry_post_gallery
+/* All CSS and JS will be minified for final release */
+/********* NOTES **********/
+/*	Gallery Layout:
+		- div.CM_area								(A bounding box that contains all including scoped styling)
+			- div.masonry_post_gallery				(The whole gallery)
+				- div.masonry_brick					(Container for a single image)
+					- div or a .masonry_brick_a		(The click and hover event for each gallery image)
+						- img.masonry_brick_img		(Each image)
+					- div.cactus_masonry_databox	(The title/except box)
+						- div.cm_title				(The title area)
+						- div.cm_excerpt			(The except area)
+			- div#MPG_Loader_Container				(The loading bar - generally full width - only appears for the first gallery)
+				- div#MPG_Loader_Color				(The loading box - i.e. the visible section of the loader bar)
+					- div#MPG_Spin_Box				(This box with the spin animation)
+					- div#MPG_Loader				(The 'loading' text)
+	
+		Every element above contains no more than one of each element next in the hierarchy.  The
+		exception is that there will be many div.masonry_brick elements - one per image.
+*/
+/**************			General Gallery and Contents			****************/
+div.masonry_brick, a.masonry_brick_a, div.masonry_brick_a, img.masonry_brick_img, div.masonry_post_gallery, div.cactus_masonry_databox
 {
+	-moz-box-sizing: border-box; 
+	-webkit-box-sizing: border-box; 
 	box-sizing:border-box;
-	-moz-box-sizing:border-box;
 }
 div.masonry_brick
 {
-	display: table;
+	display: inline-block;
 	float: left;
 	border-style: solid;
+	overflow: visible;
 }
+div.CM_area
+{
+	clear: both;
+}
+div.CM_area div
+{
+	border-style: none;
+}
+
+/*IE8 max-width/max-height BUG */
+div.masonry_post_gallery, div.masonry_brick, a.masonry_brick_a, div.masonry_brick_a, #content div.masonry_post_gallery img.masonry_brick_img /*Very specific selector for IE8*/
+{/* IE8 - for bug that stops images with max-width or max-height = 100% from rendering */
+	max-height: none;
+	max-width: none;
+}
+
 a.masonry_brick_a, div.masonry_brick_a, img.masonry_brick_img
 {
+	display: block;
 	padding: 0px;
-	margin: 0px;
 	border-style: solid;
 }
 a.masonry_brick_a, div.masonry_brick_a 
 {	
-	display: table-cell;
-	vertical-align: middle;
 	position: relative;
-	overflow:hidden;
+	overflow: hidden;
 }
-img.masonry_brick_img:hover
+div.masonry_brick_a:hover img.masonry_brick_img, a.masonry_brick_a:hover img.masonry_brick_img, div.masonry_brick_a:hover div.cactus_masonry_cropped, a.masonry_brick_a:hover div.cactus_masonry_cropped
 {
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
@@ -30,7 +66,7 @@ img.masonry_brick_img:hover
 	transition: all 0.5s ease-in-out;
 	opacity: 0.5;
 }
-div#masonry_post_gallery
+div.masonry_post_gallery
 {
 	display: block;
 	width: 100%;
@@ -39,11 +75,31 @@ div#masonry_post_gallery
 }
 img.masonry_brick_img
 {
+	margin: 0px;
+	height: 100%;
+	width: 100%;
+}
+div.cactus_masonry_cropped
+{
+	background-color: transparent;
+	background-image: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 	display: block;
-}	
+	top: 0px;
+	pointer-events:none;
+	box-sizing: border-box;
+	border-style: solid;
+	background-origin: content-box;
+	background-position: center center;
+	background-size: cover;
+}
+/**************			Loading Box			****************/
 div#MPG_Loader_Container, div#MPG_Loader_Color, div#MPG_Spin_Box, div#MPG_Loader, div#MPG_Spin_Box, div#MPG_Loader
 {
 	pointer-events: none;
+	border-style: none;
 }
 div#MPG_Loader_Container
 {
@@ -57,9 +113,10 @@ div#MPG_Loader_Container
 	margin-top: 20px;
 	-webkit-transition: all 1s;
 	-moz-transition: all 1s;
-	-ms-transition: all 1s;
 	-o-transition: all 1s;
+	transition: all 1s;
 	font-family: Helvetica,Arial,sans-serif;
+	z-index: 1250;
 }
 div#MPG_Loader_Color
 {
@@ -90,12 +147,17 @@ div#MPG_Loader
 	padding: 0px 10px 0px 10px;			
 	display: inline-block;
 }
-div.cactus_masonry_databox
-{
-	position: absolute;
+
+/**************			Databox			****************/
+div.cactus_masonry_databox:not(#target_IE8_only) /*Transparent background for non-IE8 browsers*/
+{/*IE8 does not support the :not selector so this applies to all newer browsers*/
 	background-color: rgba(0, 0, 0, 0.6);
+}
+div.cactus_masonry_databox
+{/*For all browsers including IE8*/
+	position: absolute;
+	background-color: black;
 	width: 100%;
-	box-sizing: border-box;
 	display: block;
 	padding: 10px;
 	z-index: 1000;
@@ -104,13 +166,15 @@ div.cactus_masonry_databox
 	bottom: 0px;
 	pointer-events:none;
 }
-
 div.cactus_masonry_databox div.cm_title
 {
 	font-size: 1.35em;
 }
-
 div.cactus_masonry_databox div.cm_exerpt
 {
 	font-size: 0.90em;
+}
+h3.cmpg_javascript_error
+{
+	text-align: center;
 }
